Fix overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   /* text-align: center; */
   background: linear-gradient(180deg, rgba(231, 23, 21, 0.25) 19.09%, rgba(240, 92, 91, 0.1525) 56.49%, rgba(7, 57, 72, 0.25) 117.87%), #073948;
   color: white;
+  overflow-x: hidden !important;
 }
 
 body::-webkit-scrollbar {
